Fix data post show DL models

--- a/imp.html
+++ b/imp.html
@@ -32,12 +32,13 @@
     </div>
 
     <div id="agenda" class="step" data-x="500" data-y="50">
-        <h3>Only solution to our lost situation</h3>
-        <h3>Clearing concepts</h3>
-        <h3>Ever told to clear your concepts??? 100 times </h3>
-        <h3>What does that mean?</h3>
-        <h3>Ever asked what it means?</h3>
-        <h3>Anyone ever told how to do dat??</h3>
+        <h3>Deep Learning is used to solve image</h3>
+        <h3>categorization and segmentation, </h3>
+        <h3>object detection, video description,</h3>
+        <h3>audio classification, game playing,</h3>
+        <h3>speech recognition and synthesis,</h3>
+        <h3>machine translation, driving cars....</h3>
+        <h3>Let's see what makes it possible!</h3>
     </div>
 
     <div class="cube">
@@ -51,11 +52,13 @@
                 </ul>
         </div>
         <div class="leftFace step" data-x="-125" data-y="90" data-z="-985" data-rotate-x="-30" data-rotate-y="-45" data-rotate-z="0" data-scale="0.5">
-                    <h1>Where we are now?</h1>
+                <h1>Where we are now?</h1>
+                <ul>
                     <li>Encoder Decoder</li>
                     <p>It is a compression algorithm which reduces the size of network. This dimensionality reduction technique ensures it efficiently learns the network representation so that decoding is easy and reconstruction of input is possible.</p>
                     <li>Deep Q Network</li>
                     <p>A model free reinforcement learning method which is used for finding optimal action selection policy. Every action leads to a reward. eg. Agents playing Atari games</p>
+                </ul>
         </div>
         <div class="rightFace step" data-x="125" data-y="90" data-z="-985" data-rotate-x="-30" data-rotate-y="45" data-rotate-z="0" data-scale="0.5">
                 <h1>Where we are headed to?</h1>
@@ -82,17 +85,17 @@
                 </ul>
         </div>
         <div class="bottomFace step" data-x="0" data-y="180" data-z="-1180" data-rotate-x="60" data-rotate-y="180" data-rotate-z="45" data-scale="0.5">
-                <h1>Adverserial N</h1>
+                <h1>Adversarial Training</h1>
                 <ul>
-                    <li>Doing 100 questions not = concept is clear</li>
-                    <li>30 peers and 1 teacher cannot clear the concept?</li>
-                    <li>Charge for practice u do and u pay for what can be achieved freely n betterly</li>
+                    <li>Rubbish Class Examples</li>
+                    <li>Adding noise</li>
+                    <li>Transfer Learning plays a bad role.</li>
                 </ul>
 
         </div>
 
         <div id="slide1" class="step" data-x="1850" align="center">
-                <form action="impress.html?#/slide10" target="_blank">
+                <form action="index.html?#/slide4" target="_blank">
                 <b><input type="submit" value="LETS GO BACK"/></b>
                 </form>
             </div> 
