Add IEEE WIELS logo

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             #slide7{
                 width:400px;
             }
+            
             #slide8{
                 width:400px;
             }
@@ -119,10 +120,13 @@
               text-align: center;
             }
 
+            .custom-height{
+                min-height: 200px;
+            }
+
             video {
             -webkit-transform: translateZ(1px);
             }
-
         </style>
 
 
@@ -132,8 +136,12 @@
 
 
         <div id="impress">
-            <div id="title" class="step transparent-white" data-z="-5000" data-y="3000">
-               <h2>Deep Learning - Scratching the surface</h2>
+            <div id="title" class="step transparent-white custom-height" data-z="-5000" data-y="3500">
+                <img src="images/wie_ils_goa_white.png">
+            </div>
+
+            <div id="title" class="step transparent-white" data-z="-5000" data-y="3150">
+                <h2>Deep Learning - Scratching the surface</h2>
             </div>
 
              <div id="ing" class="step" data-y="50">
@@ -235,12 +243,11 @@
                 <h1>Open AI</h1>
             </div>
 
-            <div id="slide7" class="step" data-x="2800" data-y='700' data-z="20">
-                SANCHEETA KAUSHAL
-               <p>Twitter-@sanchee15</p>
+            <div id="slide7" class="step" data-x="2800" data-y='900' data-z="20">
+                <p>SANCHEETA KAUSHAL</p>
+                <p>@sanchee15</p>
+                <img src="images/wie_ils_goa_white.png" style="margin-top: 30px">
             </div>
-            
-
         </div>
 
         <div class="fallback-message">
