Add images links pictures and references

--- a/imp.html
+++ b/imp.html
@@ -89,7 +89,9 @@
                 <ul>
                     <li>Rubbish Class Examples</li>
                     <li>Adding noise</li>
-                    <li>Transfer Learning plays a bad role.</li>
+                    <li>Transfer Learning</li>
+                    <li>Non-Targetted and Targetted Adversarial attacks</li>
+                    <p>Security threat since attack is poosible without even understanding or having access to the underlying architecture</p>
                 </ul>
 
         </div>
