Add code for including demo links

--- a/imp.html
+++ b/imp.html
@@ -87,7 +87,7 @@
         <div class="bottomFace step" data-x="0" data-y="180" data-z="-1180" data-rotate-x="60" data-rotate-y="180" data-rotate-z="45" data-scale="0.5">
                 <h1>Adversarial Training</h1>
                 <ul>
-                    <li>Rubbish Class Examples</li>
+                    <li>Rubbish Class <a href="https://transcranial.github.io/keras-js/#/mnist-cnn" target="_blank">Examples</a></li>
                     <li>Adding noise</li>
                     <li>Transfer Learning</li>
                     <li>Non-Targetted and Targetted Adversarial attacks</li>
